<resources>
    <string name="app_name">Feria de la Solidaridad</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_image">Events</string>
    <string name="bottom_nav_video">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="representative_image_institution">Representative Image</string>
    <string name="institution_icon">Institution Icon</string>
    <string name="app_about">XIX Feria de la Solidaridad</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at tristique velit. Vestibulum eget erat ac augue maximus feugiat. Cras luctus hendrerit ligula, non pretium nisi dictum quis. Nunc venenatis sodales velit. Cras gravida nisi odio, a laoreet felis venenatis quis. Aliquam erat volutpat. Integer nec nisi eu urna volutpat facilisis vitae vitae lectus. Nullam tincidunt scelerisque tristique. Cras ac aliquam magna. Etiam diam urna, bibendum eu vehicula sit amet, mattis non ipsum. Proin sit amet ante vel purus consequat rhoncus vitae ut ipsum. Sed tempor, urna ut tempor consectetur, ipsum ipsum congue elit, vel fermentum massa tellus nec lacus. Morbi molestie nibh commodo ante congue, id mollis nisi elementum. Praesent semper mi eget porta viverra. Proin condimentum pulvinar dolor, ullamcorper sollicitudin enim imperdiet ac. Curabitur convallis, risus et condimentum eleifend, justo nisl tempor orci, non posuere nisi turpis non urna.</string>
    <string name="representative_event_institution">Representative Event Institution</string>
    <string name="meetup_logo">meetup logo</string>
    <string name="facebook_line">Find us on </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="event_poster">Event Poster</string>
    <string name="confirm_assist">Confirm Assist</string>
    <string name="login">Sign in</string>
    <string name="OK">OK</string>
    <string name="login_message">You must be logged in</string>
    <string name="about_title">About</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="instagram_icon">instagram icon</string>
    <string name="visit_our_facebook_page">Visit our Facebook Page</string>
    <string name="instagram_message">Follow us on Instagram!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="need_an_account">Need an account?</string>
    <string name="representative_news_image">Representative News Image</string>
    <string name="bottom_nav_news">News</string>
    <string name="log_out">Log out</string>
    <string name="my_events">Events</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="faculty">Faculty</string>
    <string name="carousel_image">carousel_image</string>
    <string name="career">career</string>
    <string name="year">year</string>
    <string name="bottom_nav_images">Images</string>
    <string name="report">Confirm to CSS</string>
    <string name="image_to_zoom">Image to Zoom</string>
    <string name="Telefono">Phone</string>
    <string name="correo">e-mail</string>
    <string name="Formulario">Form</string>
    <string name="outstanding">Outstanding</string>
    <string name="alumnos_que_destacaron_en_su_servicio_social">data_outstanding_title</string>
    <string name="data_oustanding_title">Alumnos que destacaron en su servicio social</string>
    <string name="continuar">Continuar</string>
    <string name="actividades">Actividades</string>
</resources>