<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/bottom_nav_home"
        />
    <item
        android:id="@+id/mediaFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_image"
        android:title="@string/bottom_nav_image"
        />
    <item
        android:id="@+id/newsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_news"
        android:title="@string/bottom_nav_news"
        />
    <!--<item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/bottom_nav_video"
        />-->
</menu>