<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SignUpViewModel"
            type="com.sort.feriaapp.viewmodels.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.SignUpActivity">

        <ProgressBar
            android:id="@+id/progress_bar_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <View
            android:id="@+id/view_template"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/sign_up"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    app:error="@{SignUpViewModel.errorFirstName}"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={SignUpViewModel.inputFirstName}"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    app:error="@{SignUpViewModel.errorLastName}"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={SignUpViewModel.inputLastName}"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_faculty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="15dp"
                    android:prompt="@string/faculty"
                    android:spinnerMode="dialog"
                    app:selectedValue="@={SignUpViewModel.faculty}"
                    tools:entries="@array/facultades" />

                <Spinner
                    android:id="@+id/spinner_career"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="15dp"
                    android:prompt="@string/career"
                    android:spinnerMode="dialog"
                    app:selectedValue="@={SignUpViewModel.career}"
                    tools:entries="@array/arquitectura_e_ingenieria" />

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="15dp"
                    android:prompt="@string/year"
                    android:spinnerMode="dialog"
                    app:selectedValue="@={SignUpViewModel.year}"
                    tools:entries="@array/year" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    app:error="@{SignUpViewModel.errorEmail}"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={SignUpViewModel.inputEmail}"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    app:endIconMode="password_toggle"
                    app:error="@{SignUpViewModel.errorPassword}"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={SignUpViewModel.inputPassword}"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--<Spinner
                    android:id="@+id/spinner_career"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="15dp"
                    android:prompt="@string/faculty"
                    android:spinnerMode="dialog"
                    tools:entries="@array/sociales_y_humanidades" />-->


                <Button
                    android:id="@+id/buttonGoSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/sign_up"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account" />

                    <TextView
                        android:id="@+id/redirect_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>