<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sort.feriaapp.viewmodels.OustandingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/data_oustanding_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            tools:src="@drawable/slider"
            app:setImageUrl="@{viewmodel.imageURL}"
            android:contentDescription="@string/representative_image_institution" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            htmlFormattedText="@{viewmodel.students}"/>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[0]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[1]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[2]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[3]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[4]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[5]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[6]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[7]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[8]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[9]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[10]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[11]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[12]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[13]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[14]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[15]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[16]}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@string/lorem_ipsum"
            android:text="@{viewmodel.students[17]}"/>-->

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>